<resources>
    <string name="app_name">TharaniGnanasegaram_Project2</string>
    <string name="Add">\u002B</string>
    <string name="Added">\u2713</string>
    <string name="ViewCard">View Card</string>
    <string name="cardTitle">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total:</string>
    <string name="shippingInfo">Shipping Information</string>
    <string name="fullName">Full Name</string>
    <string name="street">Street</string>
    <string name="unit">Unit/Apartment</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="zip">Zip code</string>
    <string name="country">Country</string>
    <string name="Payment">Proceed to payment</string>
    <string name="addProducts">Add Menu</string>
    <string name="prodName">Product Name</string>
    <string name="prodDesc">Product Description</string>
    <string name="prodPrice">Product Price</string>
    <string name="prodImage">Product Image</string>
    <string name="saveProd">Save Menu</string>
    <string name="addImg">Select Image</string>
    <string name="quantity">Quantity:</string>
    <string name="menuDetail">Menu Description</string>
    <string name="LetsStart">Let\'s Start</string>
    <string name="mrngcafe">Morning Cafe</string>
    <string name="menu">Menu</string>
    <string name="myorder">My Cart</string>
    <string name="filldetails">Please fill all the details</string>
    <string name="cardlengthinvalid">Card number should be 12 digits</string>
    <string name="orderplaced">Order placed successfully</string>
    <string name="emptyFieldValidation">Please fill all the fields</string>
    <string name="cardNumberValidation">Card number should be 16 digits</string>
    <string name="paymentConfirm">Are you confirming the payment?</string>
    <string name="paymentConfirmation">Payment confirmation</string>
    <string name="proceedPay">Confirm Payment</string>
    <string name="successMsg">Success</string>
    <string name="orderSuccess">Order placed successfully</string>
    <string name="warningMsg">Warning</string>
    <string name="noFileSelected">No image is selected</string>
    <string name="invalidPriceError">Price should be numeric</string>
    <string name="PaymentTitle">Payment</string>
    <string name="ccvValidation">CCV should be 3 digits</string>
</resources>