<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white2"
    tools:context=".AddProducts">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/addProducts"
            android:gravity="center"
            android:fontFamily="sans-serif-medium"
            android:textSize="28dp"
            android:textColor="@color/white"
            android:background="@color/green_100"
            android:layout_marginBottom="25dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/prodName"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/prodnameinput"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="25dp"
                    android:background="@color/white"
                    android:minHeight="48dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/prodDesc"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/proddescinput"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="25dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/prodPrice"
                    android:textSize="20dp" />


                <EditText
                    android:id="@+id/prodpriceinput"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="25dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/prodImage"
                    android:textSize="20dp" />


                <Button
                    android:id="@+id/btnAddImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/teal_700"
                    android:theme="@style/Theme.Material3.Light"
                    android:text="@string/addImg" />

                <ImageView
                    android:id="@+id/menuImageView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp" />

                <Button
                    android:id="@+id/btnAddMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/orange_100"
                    android:textSize="25dp"
                    android:theme="@style/Theme.Material3.Light"
                    android:text="@string/saveProd"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>